// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test disabling of a ListItem control 1`] = `
<ListItem
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip=""
  top=""
  useedit={false}
  visible={true}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <Item
      className="ui-listitem"
      contentEditable={false}
      direction="right"
      disabled={true}
      errorMessage=""
      focus={false}
      height=""
      hiddenLeftButton={false}
      hiddenRightButton={false}
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id=""
      layout={5}
      left=""
      leftButton={null}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="ListItem"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      onSelect={[Function]}
      onUpdate={[Function]}
      rightButton={null}
      selected={false}
      sizing="normal"
      stacked={false}
      style={Object {}}
      testing={true}
      theme={null}
      title="test title"
      tooltip=""
      top=""
      useedit={false}
      visible={true}
      widget={null}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#c0c0c0",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "headerHoverColor": "#ffe11a",
            "hoverColor": "#c0c0c0",
            "inputBorderColor": "#c0c0c0",
            "selectedBackgroundColor": "#1f8a70",
            "selectedForegroundColor": "#ffe11a",
            "tooltipBackgroundColor": "#708090",
            "tooltipForegroundColor": "#ffffff",
            "transitionDelay": "0.5s",
          }
        }
      >
        <styled.li
          className="ui-item ui-listitem"
          id=""
          nohover={false}
          onBlur={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          selected={false}
          style={Object {}}
        >
          <li
            className="ui-item ui-listitem sc-gZMcBi foYfUM"
            id=""
            onBlur={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            selected={false}
            style={Object {}}
          >
            <Title
              className="ui-listitem"
              contentEditable={false}
              direction="right"
              disabled={true}
              errorMessage=""
              focus={false}
              height=""
              hiddenLeftButton={false}
              hiddenRightButton={false}
              href={
                Object {
                  "selectHandler": [Function],
                  "sizing": "normal",
                }
              }
              id=""
              layout={5}
              left=""
              leftButton={null}
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="ListItem"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              onSelect={[Function]}
              onUpdate={[Function]}
              rightButton={null}
              selected={false}
              sizing="normal"
              stacked={false}
              style={
                Object {
                  "padding": "2px 4px",
                }
              }
              testing={true}
              theme={null}
              title="test title"
              tooltip=""
              top=""
              useedit={false}
              visible={true}
              widget={null}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#c0c0c0",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "selectedBackgroundColor": "#1f8a70",
                    "selectedForegroundColor": "#ffe11a",
                    "tooltipBackgroundColor": "#708090",
                    "tooltipForegroundColor": "#ffffff",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.div
                  className="ui-title-bar ui-listitem"
                  disabled={true}
                  layout={5}
                  style={
                    Object {
                      "padding": "2px 4px",
                    }
                  }
                  visible={true}
                >
                  <div
                    className="ui-title-bar ui-listitem sc-htoDjs eYxWtO"
                    disabled={true}
                    style={
                      Object {
                        "padding": "2px 4px",
                      }
                    }
                  >
                    <Styled(Label)
                      className="ui-title"
                      contentEditable={false}
                      direction="right"
                      disabled={true}
                      errorMessage=""
                      focus={false}
                      height=""
                      hiddenLeftButton={false}
                      hiddenRightButton={false}
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id=""
                      layout={5}
                      left=""
                      leftButton={null}
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="ListItem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      onUpdate={[Function]}
                      rightButton={null}
                      selected={false}
                      sizing="normal"
                      stacked={false}
                      style={
                        Object {
                          "padding": "2px 4px",
                        }
                      }
                      testing={true}
                      text="test title"
                      theme={null}
                      title="test title"
                      tooltip=""
                      top=""
                      useedit={false}
                      visible={true}
                      widget={null}
                      width=""
                      xcss={
                        Array [
                          "
	text-align: left;
	flex: 5;
",
                        ]
                      }
                    >
                      <Label
                        className="ui-title sc-iwsKbI eCIUBQ"
                        contentEditable={false}
                        direction="right"
                        disabled={true}
                        errorMessage=""
                        focus={false}
                        height=""
                        hiddenLeftButton={false}
                        hiddenRightButton={false}
                        href={
                          Object {
                            "selectHandler": [Function],
                            "sizing": "normal",
                          }
                        }
                        id=""
                        layout={5}
                        left=""
                        leftButton={null}
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="ListItem"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        onMouseOut={[Function]}
                        onSelect={[Function]}
                        onUpdate={[Function]}
                        rightButton={null}
                        selected={false}
                        sizing="normal"
                        stacked={false}
                        style={
                          Object {
                            "padding": "2px 4px",
                          }
                        }
                        testing={true}
                        text="test title"
                        theme={null}
                        title="test title"
                        tooltip=""
                        top=""
                        useedit={false}
                        visible={true}
                        widget={null}
                        width=""
                        xcss={
                          Array [
                            "
	text-align: left;
	flex: 5;
",
                          ]
                        }
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.span
                            className="ui-label ui-title sc-iwsKbI eCIUBQ"
                            contentEditable={false}
                            disabled={true}
                            innerRef={[Function]}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onDoubleClick={[Function]}
                            onKeyDown={[Function]}
                            onKeyPress={[Function]}
                            sizing="normal"
                            style={
                              Object {
                                "padding": "2px 4px",
                              }
                            }
                            suppressContentEditableWarning={true}
                            visible={true}
                          >
                            <span
                              className="ui-label ui-title sc-iwsKbI eCIUBQ sc-gzVnrw hIsEHL"
                              contentEditable={false}
                              disabled={true}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDoubleClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              style={
                                Object {
                                  "padding": "2px 4px",
                                }
                              }
                              suppressContentEditableWarning={true}
                            >
                              test title
                            </span>
                          </styled.span>
                        </ThemeProvider>
                      </Label>
                    </Styled(Label)>
                  </div>
                </styled.div>
              </ThemeProvider>
            </Title>
          </li>
        </styled.li>
      </ThemeProvider>
    </Item>
  </ThemeProvider>
</ListItem>
`;

exports[`Test making ListItem control invisible 1`] = `
<ListItem
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  errorMessage=""
  focus={false}
  height=""
  hiddenLeftButton={false}
  hiddenRightButton={false}
  href={
    Object {
      "selectHandler": [Function],
      "sizing": "normal",
    }
  }
  id=""
  layout={5}
  left=""
  leftButton={null}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  obj="ListItem"
  onBlur={[Function]}
  onChange={[Function]}
  onClick={[Function]}
  onDoubleClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyPress={[Function]}
  onMouseOut={[Function]}
  onSelect={[Function]}
  onUpdate={[Function]}
  rightButton={null}
  selected={false}
  sizing="normal"
  stacked={false}
  style={Object {}}
  testing={true}
  theme={null}
  title="test title"
  tooltip=""
  top=""
  useedit={false}
  visible={false}
  widget={null}
  width=""
  xcss={null}
>
  <ThemeProvider
    theme={
      Object {
        "backgroundColor": "#ffffff",
        "borderColor": "#c0c0c0",
        "color": "#000000",
        "headerBackgroundColor": "#004358",
        "headerForegroundColor": "#ffffff",
        "headerHoverColor": "#ffe11a",
        "hoverColor": "#c0c0c0",
        "inputBorderColor": "#c0c0c0",
        "selectedBackgroundColor": "#1f8a70",
        "selectedForegroundColor": "#ffe11a",
        "tooltipBackgroundColor": "#708090",
        "tooltipForegroundColor": "#ffffff",
        "transitionDelay": "0.5s",
      }
    }
  >
    <Item
      className="ui-listitem"
      contentEditable={false}
      direction="right"
      disabled={false}
      errorMessage=""
      focus={false}
      height=""
      hiddenLeftButton={false}
      hiddenRightButton={false}
      href={
        Object {
          "selectHandler": [Function],
          "sizing": "normal",
        }
      }
      id=""
      layout={5}
      left=""
      leftButton={null}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      obj="ListItem"
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onMouseOut={[Function]}
      onSelect={[Function]}
      onUpdate={[Function]}
      rightButton={null}
      selected={false}
      sizing="normal"
      stacked={false}
      style={Object {}}
      testing={true}
      theme={null}
      title="test title"
      tooltip=""
      top=""
      useedit={false}
      visible={false}
      widget={null}
      width=""
      xcss={null}
    >
      <ThemeProvider
        theme={
          Object {
            "backgroundColor": "#ffffff",
            "borderColor": "#c0c0c0",
            "color": "#000000",
            "headerBackgroundColor": "#004358",
            "headerForegroundColor": "#ffffff",
            "headerHoverColor": "#ffe11a",
            "hoverColor": "#c0c0c0",
            "inputBorderColor": "#c0c0c0",
            "selectedBackgroundColor": "#1f8a70",
            "selectedForegroundColor": "#ffe11a",
            "tooltipBackgroundColor": "#708090",
            "tooltipForegroundColor": "#ffffff",
            "transitionDelay": "0.5s",
          }
        }
      >
        <styled.li
          className="ui-item ui-listitem"
          id=""
          nohover={false}
          onBlur={[Function]}
          onDoubleClick={[Function]}
          onKeyDown={[Function]}
          onKeyPress={[Function]}
          onMouseOut={[Function]}
          selected={false}
          style={Object {}}
        >
          <li
            className="ui-item ui-listitem sc-gZMcBi foYfUM"
            id=""
            onBlur={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onMouseOut={[Function]}
            selected={false}
            style={Object {}}
          >
            <Title
              className="ui-listitem"
              contentEditable={false}
              direction="right"
              disabled={false}
              errorMessage=""
              focus={false}
              height=""
              hiddenLeftButton={false}
              hiddenRightButton={false}
              href={
                Object {
                  "selectHandler": [Function],
                  "sizing": "normal",
                }
              }
              id=""
              layout={5}
              left=""
              leftButton={null}
              location="none"
              noedit={false}
              nohover={false}
              noripple={false}
              obj="ListItem"
              onBlur={[Function]}
              onChange={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onMouseOut={[Function]}
              onSelect={[Function]}
              onUpdate={[Function]}
              rightButton={null}
              selected={false}
              sizing="normal"
              stacked={false}
              style={
                Object {
                  "padding": "2px 4px",
                }
              }
              testing={true}
              theme={null}
              title="test title"
              tooltip=""
              top=""
              useedit={false}
              visible={false}
              widget={null}
              width=""
              xcss={null}
            >
              <ThemeProvider
                theme={
                  Object {
                    "backgroundColor": "#ffffff",
                    "borderColor": "#c0c0c0",
                    "color": "#000000",
                    "headerBackgroundColor": "#004358",
                    "headerForegroundColor": "#ffffff",
                    "headerHoverColor": "#ffe11a",
                    "hoverColor": "#c0c0c0",
                    "inputBorderColor": "#c0c0c0",
                    "selectedBackgroundColor": "#1f8a70",
                    "selectedForegroundColor": "#ffe11a",
                    "tooltipBackgroundColor": "#708090",
                    "tooltipForegroundColor": "#ffffff",
                    "transitionDelay": "0.5s",
                  }
                }
              >
                <styled.div
                  className="ui-title-bar ripple ui-listitem"
                  disabled={false}
                  layout={5}
                  style={
                    Object {
                      "padding": "2px 4px",
                    }
                  }
                  visible={false}
                >
                  <div
                    className="ui-title-bar ripple ui-listitem sc-htoDjs ljfypm"
                    disabled={false}
                    style={
                      Object {
                        "padding": "2px 4px",
                      }
                    }
                  >
                    <Styled(Label)
                      className="ui-title"
                      contentEditable={false}
                      direction="right"
                      disabled={false}
                      errorMessage=""
                      focus={false}
                      height=""
                      hiddenLeftButton={false}
                      hiddenRightButton={false}
                      href={
                        Object {
                          "selectHandler": [Function],
                          "sizing": "normal",
                        }
                      }
                      id=""
                      layout={5}
                      left=""
                      leftButton={null}
                      location="none"
                      noedit={false}
                      nohover={false}
                      noripple={false}
                      obj="ListItem"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onClick={[Function]}
                      onDoubleClick={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onKeyPress={[Function]}
                      onMouseOut={[Function]}
                      onSelect={[Function]}
                      onUpdate={[Function]}
                      rightButton={null}
                      selected={false}
                      sizing="normal"
                      stacked={false}
                      style={
                        Object {
                          "padding": "2px 4px",
                        }
                      }
                      testing={true}
                      text="test title"
                      theme={null}
                      title="test title"
                      tooltip=""
                      top=""
                      useedit={false}
                      visible={false}
                      widget={null}
                      width=""
                      xcss={
                        Array [
                          "
	text-align: left;
	flex: 5;
",
                        ]
                      }
                    >
                      <Label
                        className="ui-title sc-iwsKbI eCIUBQ"
                        contentEditable={false}
                        direction="right"
                        disabled={false}
                        errorMessage=""
                        focus={false}
                        height=""
                        hiddenLeftButton={false}
                        hiddenRightButton={false}
                        href={
                          Object {
                            "selectHandler": [Function],
                            "sizing": "normal",
                          }
                        }
                        id=""
                        layout={5}
                        left=""
                        leftButton={null}
                        location="none"
                        noedit={false}
                        nohover={false}
                        noripple={false}
                        obj="ListItem"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onClick={[Function]}
                        onDoubleClick={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        onKeyPress={[Function]}
                        onMouseOut={[Function]}
                        onSelect={[Function]}
                        onUpdate={[Function]}
                        rightButton={null}
                        selected={false}
                        sizing="normal"
                        stacked={false}
                        style={
                          Object {
                            "padding": "2px 4px",
                          }
                        }
                        testing={true}
                        text="test title"
                        theme={null}
                        title="test title"
                        tooltip=""
                        top=""
                        useedit={false}
                        visible={false}
                        widget={null}
                        width=""
                        xcss={
                          Array [
                            "
	text-align: left;
	flex: 5;
",
                          ]
                        }
                      >
                        <ThemeProvider
                          theme={
                            Object {
                              "backgroundColor": "#ffffff",
                              "borderColor": "#c0c0c0",
                              "color": "#000000",
                              "headerBackgroundColor": "#004358",
                              "headerForegroundColor": "#ffffff",
                              "headerHoverColor": "#ffe11a",
                              "hoverColor": "#c0c0c0",
                              "inputBorderColor": "#c0c0c0",
                              "selectedBackgroundColor": "#1f8a70",
                              "selectedForegroundColor": "#ffe11a",
                              "tooltipBackgroundColor": "#708090",
                              "tooltipForegroundColor": "#ffffff",
                              "transitionDelay": "0.5s",
                            }
                          }
                        >
                          <styled.span
                            className="ui-label ui-title sc-iwsKbI eCIUBQ"
                            contentEditable={false}
                            disabled={false}
                            innerRef={[Function]}
                            onBlur={[Function]}
                            onClick={[Function]}
                            onDoubleClick={[Function]}
                            onKeyDown={[Function]}
                            onKeyPress={[Function]}
                            sizing="normal"
                            style={
                              Object {
                                "padding": "2px 4px",
                              }
                            }
                            suppressContentEditableWarning={true}
                            visible={false}
                          >
                            <span
                              className="ui-label ui-title sc-iwsKbI eCIUBQ sc-gzVnrw ivkSMY"
                              contentEditable={false}
                              disabled={false}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onDoubleClick={[Function]}
                              onKeyDown={[Function]}
                              onKeyPress={[Function]}
                              style={
                                Object {
                                  "padding": "2px 4px",
                                }
                              }
                              suppressContentEditableWarning={true}
                            >
                              test title
                            </span>
                          </styled.span>
                        </ThemeProvider>
                      </Label>
                    </Styled(Label)>
                  </div>
                </styled.div>
              </ThemeProvider>
            </Title>
          </li>
        </styled.li>
      </ThemeProvider>
    </Item>
  </ThemeProvider>
</ListItem>
`;

exports[`Test retrieval of ListItem props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "errorMessage": "",
  "focus": false,
  "height": "",
  "hiddenLeftButton": false,
  "hiddenRightButton": false,
  "href": Object {
    "selectHandler": [Function],
    "sizing": "normal",
  },
  "id": "",
  "layout": 5,
  "left": "",
  "leftButton": null,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "obj": "ListItem",
  "onBlur": [Function],
  "onChange": [Function],
  "onClick": [Function],
  "onDoubleClick": [Function],
  "onFocus": [Function],
  "onKeyDown": [Function],
  "onKeyPress": [Function],
  "onMouseOut": [Function],
  "onSelect": [Function],
  "onUpdate": [Function],
  "rightButton": null,
  "selected": false,
  "sizing": "normal",
  "stacked": false,
  "style": Object {},
  "testing": true,
  "theme": null,
  "title": "​",
  "tooltip": "",
  "top": "",
  "useedit": false,
  "visible": true,
  "widget": null,
  "width": "",
  "xcss": null,
}
`;

exports[`Test the creation of a ListItem control with left & right title 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <Item
    className="ui-listitem"
    contentEditable={false}
    direction="right"
    disabled={false}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={false}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title left"
    tooltip=""
    top=""
    useedit={false}
    visible={true}
    widget="test title right"
    width=""
    xcss={null}
  />
</ThemeProvider>
`;

exports[`Test the creation of a ListItem control with simple title 1`] = `
<ThemeProvider
  theme={
    Object {
      "backgroundColor": "#ffffff",
      "borderColor": "#c0c0c0",
      "color": "#000000",
      "headerBackgroundColor": "#004358",
      "headerForegroundColor": "#ffffff",
      "headerHoverColor": "#ffe11a",
      "hoverColor": "#c0c0c0",
      "inputBorderColor": "#c0c0c0",
      "selectedBackgroundColor": "#1f8a70",
      "selectedForegroundColor": "#ffe11a",
      "tooltipBackgroundColor": "#708090",
      "tooltipForegroundColor": "#ffffff",
      "transitionDelay": "0.5s",
    }
  }
>
  <Item
    className="ui-listitem"
    contentEditable={false}
    direction="right"
    disabled={false}
    errorMessage=""
    focus={false}
    height=""
    hiddenLeftButton={false}
    hiddenRightButton={false}
    href={
      Object {
        "selectHandler": [Function],
        "sizing": "normal",
      }
    }
    id=""
    layout={5}
    left=""
    leftButton={null}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    obj="ListItem"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onDoubleClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onMouseOut={[Function]}
    onSelect={[Function]}
    onUpdate={[Function]}
    rightButton={null}
    selected={true}
    sizing="normal"
    stacked={false}
    style={Object {}}
    testing={true}
    theme={null}
    title="test title"
    tooltip=""
    top=""
    useedit={false}
    visible={true}
    widget={null}
    width=""
    xcss={null}
  />
</ThemeProvider>
`;
